<?xml version="1.0"?>
<package>
  <name>canny_edge_my_face</name>
  <version>1.0.0</version>
  <description>The canny_edge_my_face package</description>

  <maintainer email="josenunopereira@gmail.com">Jose Pereira</maintainer>

  <license>BSD</license>

  <author email="josenunopereira@gmail.com">Jose Pereira</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
